@@ -82,6 +82,7 @@ Common.About.CreditsDialog.software-development=Software Development
 Common.About.CreditsDialog.design-team=Design Team
 Common.About.CreditsDialog.interviews=Interviews
 
+Common.About.CreditsDialog.TranslationCreditsTitle=Translation provided by...
 Common.About.CreditsDialog.UsesThirdPartySoftware=This program uses the following third-party software
 
 # Startup dialog
